# NB_robot

./: README.md
Navigation/: README.md
Navigation/WorkSpace/src/Navi_bot/: CMakeLists.txt  package.xml
Navigation/WorkSpace/src/Navi_bot/config/: nav2_params.yaml  slam_params.yaml
Navigation/WorkSpace/src/Navi_bot/launch/: nav2.py  slam_toolbox.py
Navigation/WorkSpace/src/Navi_bot/maps/: maze.pgm  maze.yaml
Navigation/WorkSpace/src/sim_robot/: CMakeLists.txt  package.xml
Navigation/WorkSpace/src/sim_robot/config/rviz2/: default.rviz
Navigation/WorkSpace/src/sim_robot/launch/: bot_pub.py  gazebo.launch.py  launch.and.py
Navigation/WorkSpace/src/sim_robot/urdf/: turtlebot3_waffle_pi.urdf
Navigation/WorkSpace/src/sim_robot/world/: maze.world
Navigation/WorkSpace/src/sim_robot/world/maze/: model.sdf
Vision/: README.md
Vision/WorkSpace/src/auto_aim/: CMakeLists.txt  package.xml
Vision/WorkSpace/src/auto_aim/src/: auto_aim_turret.cpp
Vision/WorkSpace/src/auto_aim_interfaces/: CMakeLists.txt  package.xml
Vision/WorkSpace/src/auto_aim_interfaces/msg/: Position.msg  ResultOrder.msg
